--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-material-design": "^4.1.3",
     "jquery": "^3.6.0",
+    "mdb-ui-kit": "^3.8.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
