--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,23 +12,4 @@ amazon:
   access_key_id: <%=  ENV['AMAZON_S3_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AMAZON_S3_SECRET_ACCESS_KEY'] %>
   region: ap-northeast-1
-  bucket: tamari-ba
-
-# Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket
-
-# Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
-# microsoft:
-#   service: AzureStorage
-#   storage_account_name: your_account_name
-#   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
-#   container: your_container_name
-
-# mirror:
-#   service: Mirror
-#   primary: local
-#   mirrors: [ amazon, google, microsoft ]
+  bucket: <%= ENV['AMAZON_S3_BUCKET'] %>
