--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     ports:
       - '3306:3306'
     environment:
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_DATABASE: tamari_ba_dev
+      MYSQL_ROOT_PASSWORD: 
       TZ: "Asia/Tokyo"
     volumes:
       - ./mysql/db_data:/var/lib/mysql
