--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-GOOGLE_MAP_API_KEY=XXXXXXXXXXXXXX
-AMAZON_S3_BUCKET=XXXXXXXXXXXX
+GOOGLE_MAP_API_KEY=
+AMAZON_S3_ACCESS_KEY_ID=
+AMAZON_S3_SECRET_ACCESS_KEY=
+AMAZON_S3_BUCKET=
 DATABASE_HOST=db
 DATABASE_NAME=tamari_ba_dev
 DATABASE_USER=root
